# Chtest

./: .env.example  .gitignore  AGENTS.md  NEXT_AI_TASK.md  START_HERE_FOR_AI.md
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/versions/: 20260626_0001_project_core.py  20260629_0002_ai_runtime_core.py  20260629_0003_prompt_skill_registry.py  20260629_0004_requirement_review.py  20260629_0005_case_generation.py  20260701_0006_review_history.py  20260701_0007_generated_case_knowledge_evidence.py
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py
backend/app/modules/ai_runtime/: __init__.py  artifact_store.py  models.py  router.py  schemas.py  service.py
backend/app/modules/automation/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/cases/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/cicd/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/execution/: __init__.py  jmeter_runner.py  models.py  newman_runner.py  playwright_runner.py  pytest_runner.py  router.py  schemas.py  service.py
backend/app/modules/extension/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/projects/: models.py  router.py  schemas.py  service.py
backend/app/modules/prompt_skill/: __init__.py  eval_bench.py  eval_samples.py  models.py  registry_loader.py  router.py  schemas.py  service.py
backend/app/modules/reporting/: __init__.py  models.py  router.py  (+2 more)
backend/app/tests/: test_health.py
backend/app/workers/: enqueue.py
(+309 files in other folders)
