[project]
name = "chtest-backend"
version = "0.1.0"
description = "Chtest FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["app/tests"]
